base/CommunityService/deployment-communityservice.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: communityservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: communityservice
  template:
    metadata:
      labels:
        app: communityservice
    spec:
      containers:
        - name: communityservice
          image: "ghcr.io/coendv/group1-communityservice:dev"
          ports:
            - containerPort: 8083
              protocol: TCP
