base/CommunityService/service-communityservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: communityservice
  labels:
    app: communityservice
spec:
  selector:
    app: communityservice
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: 8083
