base/CommunityService/service-postgresql.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql
spec:
  selector:
    app: communityservice-postgresql
  ports:
    - protocol: TCP
      port: 5433
      targetPort: 5433
