base/CommunityService/route-communityservice.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: communityservice
spec:
  to:
    kind: Service
    name: communityservice
  port:
    targetPort: 8083
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
